# mvx

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  presentation.md  tech_choices.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: make-samples.sh  test-samples.sh
src/: batch.rs  config.rs  detect.rs  execute.rs  ffprobe.rs  main.rs  pdf.rs  plan.rs  tui.rs
tests/: conversion.rs
