[package]
name = "mvx"
version = "0.1.9"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
glob = "0.3"
infer = "0.16"
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tempfile = "3.12"
walkdir = "2.5"
